kubernetes/6-2-1_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: devops.k8s
      http:
        paths:
          - path: /welcome
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /echoserver
            pathType: Prefix
            backend:
              service:
                name: echoserver
                port:
                  number: 8080
